<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewmodel"
            type="com.kaiser.gitpublicrepodemo.ui.screen.gitsearch.SearchUserViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:fitsSystemWindows="true"
        android:paddingBottom="30dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/view_vertical"
                android:layout_width="1dp"
                android:layout_height="200dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.1"
                app:layout_constraintHorizontal_bias="0.55"
                />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_image_container"
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:cardCornerRadius="75dp"
                app:layout_constraintEnd_toStartOf="@+id/view_vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/view_vertical">

                <ImageView
                    android:id="@+id/profile_pic"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/profile_pic"
                    app:image_url="@{viewmodel.userDetails.avatarUrl}"
                    tools:src="@tools:sample/avatars" />

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/count_repo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{viewmodel.userDetails.repos+``}"
                android:textSize="64sp"
                app:layout_constraintBottom_toBottomOf="@+id/card_image_container"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/view_vertical"
                app:layout_constraintTop_toTopOf="@+id/view_vertical"
                tools:text="120" />

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@{`@`+viewmodel.userDetails.username}"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/name"
                app:layout_constraintEnd_toEndOf="@+id/card_image_container"
                app:layout_constraintStart_toStartOf="@+id/card_image_container"
                app:layout_constraintTop_toBottomOf="@+id/card_image_container"
                app:layout_constraintVertical_chainStyle="packed"
                tools:text="username" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:gravity="center"
                android:text="@{viewmodel.userDetails.name}"
                app:layout_constraintEnd_toEndOf="@+id/card_image_container"
                app:layout_constraintStart_toStartOf="@+id/card_image_container"
                app:layout_constraintTop_toBottomOf="@+id/username"
                tools:text="FName LName" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_repository"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="@{(viewmodel.userDetails.repos != 0)}"
                android:text="@string/view_repos"
                android:textAllCaps="false"
                app:cornerRadius="20dp"
                app:layout_constraintEnd_toEndOf="@+id/count_repo"
                app:layout_constraintStart_toStartOf="@+id/count_repo"
                app:layout_constraintTop_toBottomOf="@+id/count_repo" />


            <TextView
                android:id="@+id/count_followers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{viewmodel.userDetails.followers+``}"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/txt_followers"
                app:layout_constraintEnd_toEndOf="@+id/txt_followers"
                app:layout_constraintStart_toStartOf="@+id/txt_followers"
                tools:text="20" />


            <TextView
                android:id="@+id/txt_followers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/followers"
                app:layout_constraintBottom_toBottomOf="@+id/view"
                app:layout_constraintEnd_toStartOf="@+id/view"
                app:layout_constraintStart_toStartOf="parent" />

            <View
                android:id="@+id/view"
                android:layout_width="1dp"
                android:layout_height="48dp"
                android:layout_marginTop="24dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toStartOf="@+id/view2"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name" />


            <TextView
                android:id="@+id/count_followings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{viewmodel.userDetails.following+``}"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/txt_followings"
                app:layout_constraintEnd_toEndOf="@+id/txt_followings"
                app:layout_constraintStart_toStartOf="@+id/txt_followings"
                tools:text="10" />


            <TextView
                android:id="@+id/txt_followings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/following"
                app:layout_constraintBottom_toBottomOf="@+id/view2"
                app:layout_constraintEnd_toStartOf="@+id/view2"
                app:layout_constraintStart_toEndOf="@+id/view" />

            <View
                android:id="@+id/view2"
                android:layout_width="1dp"
                android:layout_height="48dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/view"
                app:layout_constraintTop_toTopOf="@+id/view" />

            <TextView
                android:id="@+id/count_gists"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{viewmodel.userDetails.gists+``}"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/txt_gists"
                app:layout_constraintEnd_toEndOf="@+id/txt_gists"
                app:layout_constraintStart_toStartOf="@+id/txt_gists"
                tools:text="20" />

            <TextView
                android:id="@+id/txt_gists"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gists"
                app:layout_constraintBottom_toBottomOf="@+id/view2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/view2" />

            <View
                android:id="@+id/view_horizontal"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="24dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_followers" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:drawableStart="@drawable/ic_article_24"
                    android:drawablePadding="8dp"
                    android:gravity="center"
                    android:text="@{(viewmodel.userDetails.bio==null) ? `Bio not available` : viewmodel.userDetails.bio}"
                    tools:text="User Bio" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:drawableStart="@drawable/ic_device_hub_24"
                    android:drawablePadding="8dp"
                    android:gravity="center"
                    android:text="@{viewmodel.userDetails.gitPageUrl}"
                    tools:text="Git page url" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:drawableStart="@drawable/ic_language_24"
                    android:drawablePadding="8dp"
                    android:gravity="center"
                    android:text="@{(viewmodel.userDetails.blog==null) ? `Blog not available` : viewmodel.userDetails.blog}"
                    tools:text="Blog url" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:drawableStart="@drawable/ic_email_24"
                    android:drawablePadding="8dp"
                    android:gravity="center"
                    android:text="@{(viewmodel.userDetails.email==null) ? `Email not available` : viewmodel.userDetails.email}"
                    tools:text="Email" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:drawableStart="@drawable/ic_location_24"
                    android:drawablePadding="8dp"
                    android:gravity="center"
                    android:text="@{(viewmodel.userDetails.location==null) ? `Location not available` : viewmodel.userDetails.location}"
                    tools:text="Location" />
            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>